force-app/main/default/objects/MessagingSession/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Access Token for each session of conversation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>