force-app/main/default/objects/MessagingSession/fields/cardNo__c.field-meta.xml
<CustomField>
    <fullName>cardNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>cardNo</label>
    <length>16</length>
    <type>Text</type>
</CustomField>