force-app/main/default/objects/MessagingSession/fields/Chatbot_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_Conversation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chatbot Conversation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>