force-app/main/default/objects/MessagingSession/fields/Estimated_Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Finish_Time__c</fullName>
    <formula>CreatedDate + ( Target_First_Response_Time__c  / 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Finish Time</label>
    <type>DateTime</type>
</CustomField>