force-app/main/default/objects/MessagingSession/fields/First_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Time__c</fullName>
    <label>First Response Time</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>