force-app/main/default/objects/MessagingSession/fields/is_Timer_Stop__c.field-meta.xml
<CustomField>
    <fullName>is_Timer_Stop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Timer Stop</label>
    <type>Checkbox</type>
</CustomField>