force-app/main/default/objects/MessagingSession/fields/Nomer_Telepon__c.field-meta.xml
<CustomField>
    <fullName>Nomer_Telepon__c</fullName>
    <formula>MessagingEndUser.Nomer_Telepon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nomer Telepon</label>
    <type>Text</type>
</CustomField>