force-app/main/default/objects/MessagingSession/fields/Platform_Code__c.field-meta.xml
<CustomField>
    <fullName>Platform_Code__c</fullName>
    <formula>MessagingEndUser.Platform_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform Code</label>
    <type>Text</type>
</CustomField>