force-app/main/default/objects/MessagingSession/fields/Target_First_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Target_First_Response_Time__c</fullName>
    <formula>10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target First Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>