force-app/main/default/objects/MessagingSession/fields/TglTrans__c.field-meta.xml
<CustomField>
    <fullName>TglTrans__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TglTrans</label>
    <length>16</length>
    <type>Text</type>
</CustomField>