force-app/main/default/objects/MessagingSession/fields/Waktu_Penyelesaian__c.field-meta.xml
<CustomField>
    <fullName>Waktu_Penyelesaian__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text Waktu Penyelesaian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>