force-app/main/default/objects/MessagingSession/recordTypes/Peduli_Channel.recordType-meta.xml
<RecordType>
    <fullName>Peduli_Channel</fullName>
    <active>true</active>
    <label>Peduli Channel</label>
</RecordType>