force-app/main/default/objects/MessagingSession/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>PlatformType</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>