force-app/main/default/objects/MessagingSession/listViews/Laporan_Komplain_Urgent_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Laporan_Komplain_Urgent_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>PlatformType</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>Complaint Urgent</value>
    </filters>
    <label>Laporan Komplain Urgent</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>