force-app/main/default/objects/MessagingSession/listViews/Live_Chat_1_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Live_Chat_1_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>PlatformType</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>Qlola (Beta)</value>
    </filters>
    <filters>
        <field>Company_Code__c</field>
        <operation>notEqual</operation>
        <value>Investment</value>
    </filters>
    <label>Qlola</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>