force-app/main/default/objects/MessagingSession/listViews/Peduli_E_Channel.listView-meta.xml
<ListView>
    <fullName>Peduli_E_Channel</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>PlatformType</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>Peduli E-Channel</value>
    </filters>
    <label>Peduli E-Channel</label>
</ListView>