force-app/main/default/objects/MessagingSession/listViews/SCC_Contact_Center_MessagingSession.listView-meta.xml
<ListView>
    <fullName>SCC_Contact_Center_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>SCC - Contact Center</label>
    <queue>SCC_Contact_Center</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>