force-app/main/default/objects/MessagingSession/listViews/WA_Urgent.listView-meta.xml
<ListView>
    <fullName>WA_Urgent</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>PlatformType</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>+62 822-5887-8002</value>
    </filters>
    <label>WA Urgent</label>
</ListView>